@@ -1,4 +1,7 @@
 Changes for 1.0.3.4
+
+* Minor change to the Strong AI calculation of the strength of sea units near a territory (Kevin Moore)
+
 * Fixed the connections or E/W Romania in NWO9 (ComradeKev)
 
 * Added name_place.txt for NWO (ComradeKev)
